--- a/src/components/MainSection/MainSection.css
+++ b/src/components/MainSection/MainSection.css
@@ -200,7 +200,7 @@
 .products-slider h2 {
   font-size: 1.25rem;
   font-weight: 500;
-  margin-bottom: 25px;
+  margin-bottom: 12px;
 
 }
 .products-slider {
@@ -213,9 +213,33 @@
   width: 225px;
   max-width: 100%;
   padding: 10px;
+  overflow: hidden;
+  position: relative;
+}
+.products-slider .single-product-container .price-top-right {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #ff9900;
+  background-color: #feefde;
+  padding: 2px;
+  border-radius: 2px;
+}
+.products-slider .single-product-container h3 {
+  font-weight: 500;
+  font-size: 0.75rem;
+  margin-bottom: 5px;
+  max-width: 80%;
+  text-overflow: ellipsis;
+  white-space: nowrap; 
+  overflow: hidden;
 }
 .products-slider .single-product-container img {
   width: 90%;
-  height: 200px;
+  height: 150px;
   object-fit: contain;
+}
+
+.products-slider .single-product-container .single-product-price {
+  font-weight: bold;
 }
