--- a/src/components/MainSection/MainSection.css
+++ b/src/components/MainSection/MainSection.css
@@ -9,6 +9,7 @@
   font-size: 0.75rem;
   max-width: 1200px;
   z-index: 5;
+  /* overflow: hidden; */
 }
 .main-section__left {
   position: relative;
@@ -45,7 +46,6 @@
 .main-section__middle > * {
   width: var(--middle-section-width);
   max-width: 100%;
-  z-index: -1;
 }
 .main-section__middle > * img {
   width: 100%;
@@ -61,13 +61,11 @@
   border-radius: 7px;
 }
 
-.main-section__middle .slick-prev,
-.main-section__middle .slick-next {
+.main-section__middle .slick-next,
+.main-section__middle .slick-prev {
   display: none !important;
 }
-.main-section__middle .slick-dots {
-  bottom: -48px !important;
-}
+
 .content-on-hover {
   position: absolute;
   display: flex;
@@ -82,6 +80,7 @@
   box-shadow: inset 1px 0 1px 0 #ededed;
   font-size: 0.75rem;
   padding: 5px 15px 0;
+  z-index: 5;
   /* display: none; */
 }
 .content-on-hover:hover {
@@ -143,12 +142,12 @@
     max-width: 100%;
     min-width: 100%;
   }
-  .main-section .main-section__left {
-    z-index: -1;
-  }
   .main-section .main-section__middle > * {
     max-width: 100%;
     min-width: 100%;
+  }
+  .content-on-hover {
+    display: none !important;
   }
 }
 .slider-ads-container,
@@ -201,7 +200,6 @@
   font-size: 1.25rem;
   font-weight: 500;
   margin-bottom: 12px;
-
 }
 .products-slider {
   height: 300px;
@@ -215,6 +213,10 @@
   padding: 10px;
   overflow: hidden;
   position: relative;
+}
+
+.products-slider .single-product-container img {
+  margin-inline: auto;
 }
 .products-slider .single-product-container .price-top-right {
   position: absolute;
@@ -231,7 +233,7 @@
   margin-bottom: 5px;
   max-width: 80%;
   text-overflow: ellipsis;
-  white-space: nowrap; 
+  white-space: nowrap;
   overflow: hidden;
 }
 .products-slider .single-product-container img {
